--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "axios": "^1.4.0",
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.7",
-    "react-native-paper": "^5.7.0",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "react-native-paper": "^5.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
